--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "@/next-auth.d.ts"
+    "@/types/next-auth.d.ts"
   ],
   "exclude": ["node_modules"]
 }
