--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
+    "framer-motion": "^11.3.29",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
