--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@tiptap/extension-placeholder": "^2.6.5",
+    "@tiptap/pm": "^2.6.5",
+    "@tiptap/react": "^2.6.5",
+    "@tiptap/starter-kit": "^2.6.5",
     "@uploadthing/react": "^6.7.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
