--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
+    "@tanstack/react-table": "^8.20.1",
     "@tiptap/extension-placeholder": "^2.6.5",
     "@tiptap/pm": "^2.6.5",
     "@tiptap/react": "^2.6.5",
