--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2",
+    "vaul": "^0.9.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
