--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.4.0",
     "@tanstack/react-table": "^8.20.1",
     "@tiptap/extension-placeholder": "^2.6.5",
     "@tiptap/pm": "^2.6.5",
@@ -57,6 +59,7 @@
     "react-icons": "^5.3.0",
     "resend": "^3.5.0",
     "sonner": "^1.5.0",
+    "stripe": "^16.8.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2",
