--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
+    "react-instantsearch-nextjs": "^0.1.14",
     "recharts": "^2.12.7",
     "resend": "^3.5.0",
     "sonner": "^1.5.0",
